Fix x axis overflow for GSAP animation swipe

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 body {
     color: $textcolor;
     background-color: $bgcolor;
+    overflow-x: none;
 }
 
 h1 {
