--- a/src/styles/intro.scss
+++ b/src/styles/intro.scss
@@ -6,7 +6,6 @@
     padding-left: 15rem;
     background-color: $bgcolor;
     align-items: center;
-    overflow-x: none;
 
     .intro-header {
         font-weight: lighter;
